[package]
name = "transactions-concurrent-cache-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
validator = { version = "0.15.0", features = ["derive"] }
moka = { version = "0.8", features = ["future"] }

